[gd_scene load_steps=19 format=3]

[ext_resource type="Texture2D" path="res://assets/images/library1.jpg" id="1_background"]
[ext_resource type="PackedScene" path="res://scenes/ui/game_stats.tscn" id="2_game_stats"]
[ext_resource type="PackedScene" path="res://scenes/ui/bookshelf.tscn" id="3_bookshelf"]
[ext_resource type="PackedScene" path="res://scenes/ui/bottom_panel.tscn" id="4_bottom_panel"]
[ext_resource type="Script" path="res://scripts/word_grid.gd" id="4_dp3eg"]
[ext_resource type="PackedScene" path="res://scenes/ui/word_grid.tscn" id="5_word_grid"]
[ext_resource type="Script" path="res://scripts/bookshelf.gd" id="6_0ld40"]
[ext_resource type="Script" path="res://scripts/main.gd" id="6_main_script"]
[ext_resource type="PackedScene" path="res://scenes/ui/shop_overlay.tscn" id="7_shop_overlay"]
[ext_resource type="Script" path="res://scripts/game_stats.gd" id="8_gqmmt"]
[ext_resource type="PackedScene" uid="uid://dsubgameselector1" path="res://scenes/ui/sub_games/sub_game_selector.tscn" id="8_sub_game_selector"]
[ext_resource type="PackedScene" uid="uid://dwordsearchgame" path="res://scenes/ui/sub_games/word_search.tscn" id="9_word_search"]
[ext_resource type="PackedScene" uid="uid://dcrosswordgamescn" path="res://scenes/ui/sub_games/crossword.tscn" id="10_crossword"]
[ext_resource type="Script" path="res://scripts/bottom_panel.gd" id="10_yc10j"]
[ext_resource type="Script" path="res://scripts/sub_games/word_search.gd" id="12_jscy8"]
[ext_resource type="Script" path="res://scripts/sub_games/crossword.gd" id="14_pm3ni"]
[ext_resource type="Script" path="res://scripts/shop_overlay.gd" id="16_y6deb"]
[ext_resource type="Script" path="res://scripts/sub_games/sub_game_selector.gd" id="18_og1vs"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_main_script")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_background")
expand_mode = 1
stretch_mode = 6

[node name="Title" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 20.0
offset_right = 150.0
offset_bottom = 80.0
grow_horizontal = 2
mouse_filter = 0
theme_override_font_sizes/font_size = 48
text = "WordGrid"
horizontal_alignment = 1

[node name="DebugLabel" type="Label" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 75.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 20
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
text = "Target: ???"
horizontal_alignment = 1

[node name="WordGrid" type="CenterContainer" parent="." instance=ExtResource("5_word_grid")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 400.0
offset_top = 100.0
offset_right = -340.0
offset_bottom = -240.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_dp3eg")

[node name="MessageLabel" type="Label" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -260.0
offset_right = 150.0
offset_bottom = -230.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
text = "Not a valid word"
horizontal_alignment = 1

[node name="LeftPanel" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 85.0
offset_top = -80.0
offset_right = 385.0
offset_bottom = -220.0
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Bookshelf" type="Control" parent="LeftPanel" instance=ExtResource("3_bookshelf")]
unique_name_in_owner = true
custom_minimum_size = Vector2(171, 500)
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("6_0ld40")

[node name="RightPanel" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -320.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/separation = 20

[node name="GameStats" type="PanelContainer" parent="RightPanel" instance=ExtResource("2_game_stats")]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
script = ExtResource("8_gqmmt")

[node name="BottomPanel" type="Control" parent="." instance=ExtResource("4_bottom_panel")]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 200)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 200.0
offset_top = -200.0
offset_right = -200.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("10_yc10j")

[node name="WordSearchGame" type="Control" parent="." instance=ExtResource("9_word_search")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("12_jscy8")

[node name="CrosswordGame" type="Control" parent="." instance=ExtResource("10_crossword")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("14_pm3ni")

[node name="ShopOverlay" type="Control" parent="." instance=ExtResource("7_shop_overlay")]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("16_y6deb")

[node name="SubGameSelector" type="Control" parent="." instance=ExtResource("8_sub_game_selector")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("18_og1vs")
